# constraints-as-terminations

./: .clang-format  .dockerignore  .fdignore  .gitignore  Dockerfile  README.md  archive-logs-dir.sh  clbin_src.sh  compose.yml  create-env-isaac-lab-uv.sh  create-isaac-lab-env-uv.sh  justfile  pyproject.toml  requirements.txt  runpod-setup.sh
.devcontainer/: compose.yml  devcontainer.json
exts/cat_envs/cat_envs/: __init__.py
exts/cat_envs/cat_envs/assets/: go2_config.py
exts/cat_envs/cat_envs/tasks/locomotion/velocity/config/solo12/: __init__.py  cat_flat_env_cfg.py  cat_go2_rough_terrain_env_cfg.py  cat_rectangular_stairs_env_cfg.py
exts/cat_envs/cat_envs/tasks/locomotion/velocity/config/solo12/agents/: clean_rl_ppo_cfg.py
exts/cat_envs/cat_envs/tasks/utils/cat/: cat_env.py  constraint_manager.py  constraints.py  curriculums.py
exts/cat_envs/cat_envs/tasks/utils/cleanrl/: ppo.py  rl_cfg.py
exts/cat_envs/cat_envs/tasks/utils/mdp/: commands.py  events.py  observations.py  rewards.py  terminations.py
scripts/: analyze_run_range.py  analyze_terrain_reward_correlation.py  archive-logs-dir.sh  check_and_install_tinytex_for_plots.sh  compare_tensor_snapshots.py  cot_ci_plot.py  eval.py  generate_plots.py  loss_landscape_test.py  metrics_utils.py  plot_reward_landscape.py  plot_sim2real.py  plot_wandb_ci.py  sim2real_eval.py  step_height_box_plot.py  trace_model_checkpoint.py
scripts/clean_rl/: cli_args.py  compare_tensor_snapshots.py  eval.py  play.py  train.py
sim2real/: .dockerignore  .tmux.conf  .vimrc  CMakeLists.txt  Dockerfile  Dockerfile.elevation_mapping_cupy_wip  Go2_Loukas.vsk  bootstrap_ros2_ws.sh  build-and-run.sh  check_rosbag_dt.py  check_zmq_frequency.py  compose.no-multiarch.yml  compose.yml  cyclone_config.xml  dependencies.repos  rewrite_lidar_frame.py  ssh-time-sync.sh  test_elevation_map_delta_t.py  test_zmq_elevation_map.py  test_zmq_frequency.py
sim2real/odom_alternative_ws/src/: temp_joystick_command_zmq.py
sim2real/odom_alternative_ws/src/go2_livox_bringup/: package.xml
sim2real/odom_alternative_ws/src/go2_livox_bringup/launch/: bringup.launch.py  livox.launch.py
sim2real/ros2_ws/src/cat_bringup/: package.xml  setup.cfg  setup.py
sim2real/ros2_ws/src/cat_bringup/config/: robot_real_go2.yaml
sim2real/ros2_ws/src/cat_bringup/launch/: bringup.launch.py
sim2real/ros2_ws/src/cat_bringup/rviz/: go2_elevation_mapping.rviz
sim2real/ros2_ws/src/cat_controller/: CMakeLists.txt  package.xml
sim2real/ros2_ws/src/cat_controller/config/: cat_control_node.yaml  cat_elevation_map_comparison_node.yaml  cat_elevation_map_processing_node.yaml  elevation_map_processing_node.yaml
sim2real/ros2_ws/src/cat_controller/include/cat_controller/: inference_engine.hpp  low_level_mode_enabler.hpp  old_elevation_map_processor.hpp  shutdown_coordinator.hpp  stamped_robot_state.hpp  time_utils.hpp  timed_atomic.hpp  unitree_msg_utils.hpp
sim2real/ros2_ws/src/cat_controller/launch/: cat_control.launch.py  cat_elevation_map_comparison.launch.py  cat_elevation_map_processing.launch.py  wait_for_topics.py
sim2real/ros2_ws/src/cat_controller/src/: cat_control_node.cpp  elevation_map_comparison_node.cpp  elevation_map_processing_node.cpp  inference_engine.cpp  low_level_mode_enabler.cpp  projected_gravity_equivalence_test_node.cpp  release_motion_mode.cpp
sim2real/ros2_ws/src/cat_perception_msgs/: CMakeLists.txt  package.xml
sim2real/ros2_ws/src/cat_perception_msgs/msg/: ProcessedElevationMap.msg
sim2real/ros2_ws/src/cat_state_estimation/: package.xml  setup.cfg  setup.py
sim2real/ros2_ws/src/cat_state_estimation/launch/: livox.launch.py  odom.launch.py
sim2real/ros2_ws/src/cmd_vel_zmq_translation/: package.xml  setup.cfg  setup.py
sim2real/ros2_ws/src/cmd_vel_zmq_translation/cmd_vel_zmq_translation/: ros2_cmd_vel_zmq_translation.py  test_zmq_server.py
sim2real/ros2_ws/src/go2_livox_bringup/: setup.cfg  setup.py
sim2real/ros2_ws/src/go2_livox_bringup/launch/: bringup.launch.py
sim2real/src/: CMakeLists.txt  read_observations.cpp  release_motion_mode.cpp  run_policy.cpp  sdk_stand_example.cpp  test_pytorch_policy.cpp
sim2real/src/include/: async_rosbag_logger.hpp  history_buffer.hpp  stamped_robot_state.hpp  timed_atomic.hpp
sim2real/traced_checkpoints/: 2025-06-22-08-06-02_6299_traced_deterministic.pt  2025-06-28-17-13-04_21349_traced_deterministic.pt  2025-06-28-17-13-04_6049_traced_deterministic.pt  2025-12-28-14-47-57_29499_traced_deterministic.pt  2025-12-28-14-58-57_29649_traced_deterministic.pt  2025-12-28-15-28-51_19499_traced_deterministic.pt
