[project]
name = "cat-isaac-lab-env"
version = "0.1.0"
description = "Constraints as Terminations Isaac Lab"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "isaacsim[all,extscache]==5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allows uv to automatically find these packages without needing the long --index-url flags every time you run a command.
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
isaacsim = { index = "nvidia" }

[tool.isort]
atomic = true
profile = "black"
line_length = 120
py_version = 311
skip_glob = ["docs/*", "logs/*"]
group_by_package = true

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "ISAACLABPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
extra_standard_library = [
    "numpy",
    "h5py",
    "open3d",
    "torch",
    "tensordict",
    "bpy",
    "matplotlib",
    "gymnasium",
    "gym",
    "scipy",
    "hid",
    "yaml",
    "prettytable",
    "toml",
    "trimesh",
    "tqdm",
    "psutil",
]
known_thirdparty = [
    "omni.isaac.core",
    "omni.replicator.isaac",
    "omni.replicator.core",
    "pxr",
    "omni.kit.*",
    "warp",
    "carb",
    "Semantics",
]
known_isaaclabparty = [
    "isaaclab",
    "isaaclab_tasks",
    "isaaclab_assets"
]

known_firstparty = "cat_envs"
known_local_folder = "config"

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/docs",
    "**/logs",
    ".git",
    ".vscode",
]

typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, torch, prettytable)
# Therefore, we have to ignore missing imports
reportMissingImports = "none"
# This is required to ignore for type checks of modules with stubs missing.
reportMissingModuleSource = "none" 

reportGeneralTypeIssues = "none"       
reportOptionalMemberAccess = "warning" 
reportPrivateUsage = "warning"

