<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cat_controller</name>
  <version>0.0.1</version>
  <description>Main control node for CaT sim2real</description>
  <maintainer email="loukas.kordos@uni-tuebingen.de">Loukas Kordos</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>cat_perception_msgs</depend>
  
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>unitree_api</depend>
  <depend>unitree_go</depend>

  <depend>fmt</depend>
  <depend>eigen</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>